5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1728_2496.log
== TEST (2019-05-15 00:04:41) 
-- CODE:
num = int(input("Digite um numero: "))
soma = 0
while (num != -1):
	soma = soma + num
	
print(Soma)
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:05:34) 
-- CODE:
num = int(input("Digite um numero: "))
soma = 0
while (num != -1):
	soma = soma + num
	num = int(input("Digite um numero: "))
print(Soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(Soma)
NameError: name 'Soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 00:05:46) 
-- CODE:
num = int(input("Digite um numero: "))
soma = 0
while (num != -1):
	soma = soma + num
	num = int(input("Digite um numero: "))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 00:05:52) 
-- CODE:
num = int(input("Digite um numero: "))
soma = 0
while (num != -1):
	soma = soma + num
	num = int(input("Digite um numero: "))
print(soma)
-- EXECUTION TIME:
0.135626
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
